# buildmate

./: .env  .gitignore  README.md  docker-compose.yml  package-lock.json
basic/: pyproject.toml
basic/app/: buildmate.py  gcccall.py
basic/app/csrc/: hello.c
buildmate/: Dockerfile  pyproject.toml  requirements.txt  server.py
buildmate-extension/: CHANGELOG.md  README.md  package-lock.json  package.json
buildmate-extension/src/: extension.ts
buildmate/app/: ai_search.py  buildmate.py  call_gemini.py  fetch_webpage_content.py  gcccall.py  main.py  perform_search.py
buildmate/app/csrc/: hello.c
search/: Dockerfile
search/app/: brave_search.py  main.py
search_test/: Dockerfile  pyproject.toml
search_test/app/: main.py
search_test/tests/: test.py
