 [project]
 name = "buildmate"
 version = "0.1.0"
 description = "buildmate"
 requires-python = ">=3.8"

 dependencies = [
   "pytest", "requests", "google-generativeai"
 ]

 [tool.setuptools]
 package-dir = {"" = "."}
 packages = ["app", "tests"]

 [tool.pytest.ini_options]
 log_cli = true
 log_cli_level = "INFO"